# clproc

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  fabfile.py  pyproject.toml  vulture-whitelist.py
.github/workflows/: pythonpackage.yml
doc/: conf.py  index.rst  input_formats.rst  release_files.rst
src/clproc/parser/: core.py
tests/parser/: test_v2.py
